[gd_scene load_steps=15 format=3 uid="uid://c6w2llwaw2d3u"]

[ext_resource type="Script" uid="uid://dgeb7keo48lkf" path="res://Sinus-Simulation/Sinus-Wellen-Simulaton.gd" id="1_4dnlt"]
[ext_resource type="Script" uid="uid://cwjrrvlspox5q" path="res://Sinus-Simulation/simulation_stoppen_button.gd" id="2_54x1t"]
[ext_resource type="PackedScene" uid="uid://bvbscjgvy6ius" path="res://Sinus-Simulation/sinus_1.tscn" id="2_c04v5"]
[ext_resource type="Texture2D" uid="uid://cju7vanscyqst" path="res://Sinus-Simulation/Scala-bild.png" id="3_l7bv2"]
[ext_resource type="Script" uid="uid://dtnf284a7e6nx" path="res://Sinus-Simulation/sinus_2.gd" id="3_wifh4"]
[ext_resource type="Script" uid="uid://dns8g73gy4w1b" path="res://Sinus-Simulation/sinus_1+2.gd" id="4_23w5p"]
[ext_resource type="Script" uid="uid://cpw6s7ow8xyef" path="res://Sinus-Simulation/welle_1_button.gd" id="5_28wuw"]
[ext_resource type="Script" uid="uid://y45hhbamojvm" path="res://Sinus-Simulation/1+2bereich-sinus_1.gd" id="5_yetfu"]
[ext_resource type="Script" uid="uid://dl2jru5jk8mgq" path="res://Sinus-Simulation/1+2bereich-sinus2.gd" id="6_l7bv2"]
[ext_resource type="Script" uid="uid://bfdlulug1rdu5" path="res://Sinus-Simulation/welle_1_einzeln_button.gd" id="6_wifh4"]
[ext_resource type="Script" uid="uid://c1vj7q666jw4k" path="res://Sinus-Simulation/welle_2_button.gd" id="6_yetfu"]
[ext_resource type="Script" uid="uid://dq7dklabqqhlb" path="res://Sinus-Simulation/zurück_button.gd" id="7_c04v5"]
[ext_resource type="Script" uid="uid://cqwnv5q0jqvgt" path="res://Sinus-Simulation/welle_2_einzeln_button.gd" id="8_23w5p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7fwq1"]
bg_color = Color(1, 0, 0, 1)

[node name="Kurvenbereich" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 900.0
offset_bottom = 500.0
script = ExtResource("1_4dnlt")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Simulation-stoppen-button" type="CheckButton" parent="HBoxContainer"]
layout_mode = 2
text = "Stop"
script = ExtResource("2_54x1t")

[node name="Sinus1bereich" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 474.0
offset_bottom = 200.0

[node name="Sinus1" type="Label" parent="Sinus1bereich"]
layout_mode = 2
text = "Welle 1"
horizontal_alignment = 1

[node name="Text_Eingabe" type="GridContainer" parent="Sinus1bereich"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="Amplitude" type="Label" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
text = "Amplitude"

[node name="Amp_Eingabe1" type="LineEdit" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "50.0"
virtual_keyboard_type = 2

[node name="Frequency" type="Label" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
text = "Frequency"

[node name="Fre_Eingabe1" type="LineEdit" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "20.0"
virtual_keyboard_type = 2

[node name="X_verschiebung" type="Label" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
text = "X_Verschiebung"

[node name="Xver_Eingabe1" type="LineEdit" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "0.0"
virtual_keyboard_type = 2

[node name="Y_verschiebung" type="Label" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
text = "Y_Verschiebung"

[node name="Yver_Eingabe1" type="LineEdit" parent="Sinus1bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "0.0"
virtual_keyboard_type = 2

[node name="Control" type="Control" parent="Sinus1bereich"]
layout_mode = 2

[node name="Sinus1" parent="Sinus1bereich/Control" instance=ExtResource("2_c04v5")]
unique_name_in_owner = true
position = Vector2(200, -85)
scale = Vector2(0.8, 0.8)
default_color = Color(1, 0, 0, 1)

[node name="Scala-bild" type="Sprite2D" parent="Sinus1bereich/Control"]
show_behind_parent = true
position = Vector2(294, -85)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_l7bv2")

[node name="Sinus2bereich" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 210.0
offset_right = 474.0
offset_bottom = 380.0

[node name="Sinus2" type="Label" parent="Sinus2bereich"]
layout_mode = 2
text = "Welle 2"
horizontal_alignment = 1

[node name="Text_Eingabe" type="GridContainer" parent="Sinus2bereich"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="Amplitude" type="Label" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
text = "Amplitude"

[node name="Amp_Eingabe" type="LineEdit" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "50.0"
virtual_keyboard_type = 2

[node name="Frequency" type="Label" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
text = "Frequency"

[node name="Fre_Eingabe" type="LineEdit" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "1.5"
virtual_keyboard_type = 2

[node name="X_verschiebung" type="Label" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
text = "X_Verschiebung"

[node name="Xver_Eingabe" type="LineEdit" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "0.0"
virtual_keyboard_type = 2

[node name="Y_verschiebung" type="Label" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
text = "Y_Verschiebung"

[node name="Yver_Eingabe" type="LineEdit" parent="Sinus2bereich/Text_Eingabe"]
layout_mode = 2
placeholder_text = "0.0"
virtual_keyboard_type = 2

[node name="Control" type="Control" parent="Sinus2bereich"]
layout_mode = 2

[node name="Sinus2" parent="Sinus2bereich/Control" instance=ExtResource("2_c04v5")]
unique_name_in_owner = true
position = Vector2(200, -85)
scale = Vector2(0.8, 0.8)
default_color = Color(0, 1, 0, 1)
script = ExtResource("3_wifh4")

[node name="Scala-bild" type="Sprite2D" parent="Sinus2bereich/Control"]
show_behind_parent = true
position = Vector2(294, -85)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_l7bv2")

[node name="Sinus1+2bereich" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 474.0
offset_top = 30.0
offset_right = 918.0
offset_bottom = 390.0

[node name="Control" type="Control" parent="Sinus1+2bereich"]
layout_mode = 2

[node name="Sinus1+2" parent="Sinus1+2bereich/Control" instance=ExtResource("2_c04v5")]
position = Vector2(60, 170)
scale = Vector2(0.8, 0.8)
width = 4.0
default_color = Color(2.5028e-06, 0.510523, 0.458261, 1)
script = ExtResource("4_23w5p")

[node name="Sinus1" parent="Sinus1+2bereich/Control" instance=ExtResource("2_c04v5")]
position = Vector2(60, 170)
scale = Vector2(0.8, 0.8)
default_color = Color(1, 0, 0, 0.392157)
script = ExtResource("5_yetfu")

[node name="Sinus2" parent="Sinus1+2bereich/Control" instance=ExtResource("2_c04v5")]
position = Vector2(60, 170)
scale = Vector2(0.8, 0.8)
default_color = Color(0, 1, 0, 0.392157)
script = ExtResource("6_l7bv2")

[node name="Scala-bild" type="Sprite2D" parent="Sinus1+2bereich/Control"]
show_behind_parent = true
position = Vector2(152, 170)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_l7bv2")

[node name="Label" type="Label" parent="Sinus1+2bereich"]
layout_mode = 2
text = "Welle 3"
horizontal_alignment = 1

[node name="Tasten_zum_aneigen_der_wellen" type="GridContainer" parent="Sinus1+2bereich/Label"]
layout_mode = 0
offset_right = 60.0
offset_bottom = 140.0
columns = 2

[node name="Mischen-Label" type="Label" parent="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen"]
layout_mode = 2
text = "Mischen"

[node name="Einzeln-Label" type="Label" parent="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen"]
layout_mode = 2
text = "Einzeln"

[node name="Welle1-mischen_Button" type="Button" parent="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_pressed_color = Color(0.977937, 0.977937, 0.977937, 1)
theme_override_styles/pressed = SubResource("StyleBoxFlat_7fwq1")
text = "Welle1"
script = ExtResource("5_28wuw")

[node name="Welle1-einzeln_Button" type="Button" parent="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen"]
layout_mode = 2
focus_mode = 0
theme_override_colors/icon_pressed_color = Color(0.977937, 0.977937, 0.977937, 1)
theme_override_styles/pressed = SubResource("StyleBoxFlat_7fwq1")
text = "Welle1"
script = ExtResource("6_wifh4")

[node name="Welle2-mischen_Button" type="Button" parent="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen"]
layout_mode = 2
focus_mode = 0
text = "Welle2"
script = ExtResource("6_yetfu")

[node name="Welle2-einzeln_Button" type="Button" parent="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen"]
layout_mode = 2
focus_mode = 0
text = "Welle2"
script = ExtResource("8_23w5p")

[node name="Zurück-button" type="Button" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 450.0
offset_right = 853.0
offset_bottom = 481.0
text = "zurück"
script = ExtResource("7_c04v5")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 639.0
offset_top = 349.0
offset_right = 639.0
offset_bottom = 349.0

[connection signal="pressed" from="HBoxContainer/Simulation-stoppen-button" to="HBoxContainer/Simulation-stoppen-button" method="_on_pressed"]
[connection signal="text_changed" from="Sinus1bereich/Text_Eingabe/Amp_Eingabe1" to="Sinus1bereich/Control/Sinus1" method="_on_amp_eingabe_1_text_changed"]
[connection signal="text_changed" from="Sinus1bereich/Text_Eingabe/Fre_Eingabe1" to="Sinus1bereich/Control/Sinus1" method="_on_fre_eingabe_1_text_changed"]
[connection signal="text_changed" from="Sinus1bereich/Text_Eingabe/Xver_Eingabe1" to="Sinus1bereich/Control/Sinus1" method="_on_xver_eingabe_1_text_changed"]
[connection signal="text_changed" from="Sinus1bereich/Text_Eingabe/Yver_Eingabe1" to="Sinus1bereich/Control/Sinus1" method="_on_yver_eingabe_1_text_changed"]
[connection signal="text_changed" from="Sinus2bereich/Text_Eingabe/Amp_Eingabe" to="Sinus2bereich/Control/Sinus2" method="_on_amp_eingabe_text_changed"]
[connection signal="text_changed" from="Sinus2bereich/Text_Eingabe/Fre_Eingabe" to="Sinus2bereich/Control/Sinus2" method="_on_fre_eingabe_text_changed"]
[connection signal="text_changed" from="Sinus2bereich/Text_Eingabe/Xver_Eingabe" to="Sinus2bereich/Control/Sinus2" method="_on_xver_eingabe_text_changed"]
[connection signal="text_changed" from="Sinus2bereich/Text_Eingabe/Yver_Eingabe" to="Sinus2bereich/Control/Sinus2" method="_on_yver_eingabe_text_changed"]
[connection signal="pressed" from="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen/Welle1-mischen_Button" to="Sinus1+2bereich/Control/Sinus1+2" method="_on_welle_1_button_pressed"]
[connection signal="pressed" from="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen/Welle1-einzeln_Button" to="Sinus1+2bereich/Control/Sinus1" method="_on_welle_1_einzeln_button_pressed"]
[connection signal="pressed" from="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen/Welle2-mischen_Button" to="Sinus1+2bereich/Control/Sinus1+2" method="_on_welle_2_button_pressed"]
[connection signal="pressed" from="Sinus1+2bereich/Label/Tasten_zum_aneigen_der_wellen/Welle2-einzeln_Button" to="Sinus1+2bereich/Control/Sinus2" method="_on_welle_2_einzeln_button_pressed"]
[connection signal="pressed" from="Zurück-button" to="Zurück-button" method="_on_pressed"]
